updates to motorcycle

--- a/css/style.css
+++ b/css/style.css
@@ -646,7 +646,7 @@ ul.dropdown-menu li {
 }
 
 .bg-2 {
-  background: url("../images/bg/home-5.jpg");
+  background: url("/image/goals/goalsbanner.png");
   background-size: cover;
 }
 
